# rdaw

./: Cargo.toml
crates/rdaw-app/: Cargo.toml
crates/rdaw-app/src/: main.rs
crates/rdaw-core/: Cargo.toml
crates/rdaw-core/src/: automation.rs  buffer.rs  graph.rs  lib.rs  node.rs  nodes.rs  project.rs  tempo.rs  timeline.rs  transport.rs
crates/rdaw-core/tests/: automation.rs  fades.rs  filter.rs  mute_solo.rs  project.rs  resample.rs  tempo.rs  timeline.rs
crates/rdaw-engine/: Cargo.toml
crates/rdaw-engine/src/: lib.rs
crates/rdaw-gui/: Cargo.toml
crates/rdaw-gui/src/: app.rs  demo.rs  lib.rs  main.rs  timeline.rs  transport.rs
crates/rdaw-io/: Cargo.toml
crates/rdaw-io/examples/: bounce.rs
crates/rdaw-io/src/: lib.rs
crates/rdaw-io/tests/: wav_roundtrip.rs
