[package]
name = "rdaw-gui"
version.workspace = true
edition.workspace = true

[lib]
name = "rdaw_gui"
path = "src/lib.rs"

[[bin]]
name = "rdaw-gui"
path = "src/main.rs"

[dependencies]
rdaw-core.workspace = true
rdaw-engine.workspace = true
rdaw-io.workspace = true
anyhow.workspace = true
eframe = "0.34"
rfd = "0.17"
